# device_hisilicon_drivers

./: .gitignore  BUILD.gn  Kconfig  LICENSE  OAT.xml  README.md  README_zh.md  bundle.json  lite.mk
adc/: BUILD.gn  Makefile  adc_hi35xx.c  adc_hi35xx.h
dmac/: BUILD.gn  Makefile  dmac_hi35xx.c  dmac_hi35xx.h
firmware/common/wlan/: BUILD.gn
firmware/common/wlan/hi3881/: wifi_cfg
gpio/: BUILD.gn  Makefile  gpio_hi35xx.c
hieth-sf/: BUILD.gn  Makefile
hieth-sf/adapter/: hdf_driver_register.c  hieth_mac.c  hieth_mac.h  hieth_phy.c  hieth_phy.h  net_adapter.c  net_adapter.h
hieth-sf/include/: hieth.h
hieth-sf/include/internal/: ctrl.h  eth_drv.h  eth_mac.h  eth_phy.h  hieth_pri.h  mdio.h
hieth-sf/src/: ctrl.c  eth_mac.c  eth_phy.c  interface.c  mdio.c
hisi_sdk/: BUILD.gn  Makefile  hisi_sdk.c
i2c/: BUILD.gn  Makefile  i2c_hi35xx.c  i2c_hi35xx.h
i2s/: BUILD.gn  Makefile  i2s_aiao_hi35xx.c  i2s_aiao_hi35xx.h  i2s_codec_hi35xx.c  i2s_codec_hi35xx.h  i2s_hi35xx.c  i2s_hi35xx.h
include/hieth-sf/include/: hieth.h
include/mmc/include/himci/: himci_reg.h
include/mmc/include/himci_v200/: himci_reg.h
include/mmc/include/mmc/: mmc_caps.h
include/mmc/include/sdhci/: sdhci_reg.h
include/mtd/common/include/: mtd_common.h
mipi_csi/: BUILD.gn  Makefile  mipi_csi_hi35xx.c  mipi_csi_hi35xx.h  mipi_rx_hi2121.c  mipi_rx_hi2121.h  mipi_rx_reg.h
mipi_dsi/: BUILD.gn  Makefile  mipi_dsi_define.h  mipi_tx_hi35xx.c  mipi_tx_hi35xx.h  mipi_tx_reg.h
mmc/: BUILD.gn  Makefile
mmc/hi3516/: mmc_hi3516_adapter.c  mmc_hi3516_adapter.h
mmc/hi3518/: mmc_hi3518_adapter.c  mmc_hi3518_adapter.h
mmc/himci_v200/: himci.c  himci.h
mmc/himci_v200/proc/: himci_proc.c  himci_proc.h
mmc/proc/: proc_adapter.c  proc_adapter.h
mmc/sdhci/: sdhci.c  sdhci.h
mmc/sdhci/proc/: sdhci_proc.c  sdhci_proc.h
mtd/: BUILD.gn  Makefile
mtd/hifmc100/common/: hifmc100.c  hifmc100.h
mtd/hifmc100/spi_nand/: hifmc100_spi_nand.c  hifmc100_spi_nand.h  hifmc100_spi_nand_ids.c
mtd/hifmc100/spi_nor/: hifmc100_spi_nor.c  hifmc100_spi_nor.h  hifmc100_spi_nor_ids.c  mx25l.c  w25qh.c
pin/: BUILD.gn  Makefile  pin_hi35xx.c  pin_hi35xx.h
pwm/: BUILD.gn  Makefile  pwm_hi35xx.c  pwm_hi35xx.h
rtc/: BUILD.gn  Makefile  rtc_hi35xx.c  rtc_hi35xx.h
spi/: BUILD.gn  Makefile  spi_hi35xx.c  spi_hi35xx.h
uart/: BUILD.gn  Makefile  uart_hi35xx.c  uart_pl011.c  uart_pl011.h
watchdog/: BUILD.gn  Makefile  watchdog_hi35xx.c
wifi/driver/: BUILD.gn  Makefile
wifi/driver/core/: hdf_wlan_sdio_adapt.c
wifi/driver/hi3881/: BUILD.gn  Makefile  env_config.mk
wifi/driver/hi3881/hcc/: hcc_hmac.c  hcc_hmac_if.h  hcc_host.c  hcc_host.h
wifi/driver/hi3881/hdfadapt/: hdf_driver_register.c  hdfinit_3881.c  net_adpater.c  net_adpater.h
wifi/driver/hi3881/include/: hi_stdlib.h  hi_time.h  hi_types_base.h  hi_wifi_api.h
wifi/driver/hi3881/mac/common/: mac_device.h  mac_ie.c
wifi/driver/hi3881/mac/hmac/: hmac_config.c  hmac_mgmt_ap.c  hmac_mgmt_bss_comm.c  hmac_p2p.c  hmac_rx_data.c  hmac_scan.c  hmac_vap.c  hmac_vap.h
wifi/driver/hi3881/oal/: exception_rst.c  hi_task.c  hi_time.c  oal_cfg80211.c  oal_channel_host_if.h  oal_err_wifi.h  oal_file.h  oal_net.c  oal_net.h  oal_queue.h  oal_schedule.h  oal_sdio_host.c  oal_sdio_host_if.h  oal_sdio_if.h  oal_spinlock.h  oal_thread.h  oal_time.h  oal_util.c  oal_util.h  oal_workqueue.h  plat_firmware.c  plat_pm.c  plat_pm_wlan.c  plat_pm_wlan.h  plat_sdio.c  wlan_spec_1131h.h  wlan_types.h
wifi/driver/hi3881/wal/: hi_wifi_driver_api.c  hi_wifi_driver_wpa_if.h  wal_cfg80211.c  wal_cfg80211.h  wal_event.c  wal_hipriv.c  wal_ioctl.c  wal_ioctl.h  wal_mac80211.c  wal_main.c  wal_main.h  wal_scan.c  wal_wpa_ioctl.c  wal_wpa_ioctl.h
