# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

if (defined(ohos_lite)) {
  copy("wifi_firmware") {
    sources = [ "./hi3881" ]
    outputs = [ "$root_out_dir/vendor/firmware/hi3881" ]
  }
} else {
  ohos_prebuilt_etc("wifi_cfg") {
    source = "hi3881/wifi_cfg"
    module_install_dir = "firmware/hi3881"
    install_images = [ "vendor" ]
    part_name = "hdf"
  }
  ohos_prebuilt_etc("wifi_fw_bin") {
    source = "hi3881/hi3881_fw.bin"
    module_install_dir = "firmware/hi3881"
    install_images = [ "vendor" ]
    part_name = "hdf"
  }
  group("wifi_firmware") {
    deps = [
      ":wifi_cfg",
      ":wifi_fw_bin",
    ]
  }
}
